# progetto_bussola

./: .env.example  .gitignore  CLAUDE.md  README.md  STATO_TECNICO.md  docker-compose.yml
backend/: pyproject.toml
backend/src/bussola/: __init__.py  env.py
backend/src/bussola/api/: app.py  deps.py  errors.py
backend/src/bussola/api/routers/: auth.py  job_requests.py  matching.py  operators.py  profiles.py
backend/src/bussola/auth/: accounts.py  auth_audit.py  bootstrap.py  config.py  errors.py  models.py  passwords.py  rbac.py  service.py  sessions.py
backend/src/bussola/data/: audit.py  config.py  connection.py  migrate.py  profiles.py  pseudonym.py
backend/src/bussola/guardrails/: pii.py  pipeline.py  prompts.py  refusal.py  scope.py
backend/src/bussola/interview/: confirm.py  extraction.py  incongruence.py  interview.py  sections.py  session.py
backend/src/bussola/llm/: client.py  config.py
backend/src/bussola/matching/: errors.py  gaps.py  hard_constraints.py  models.py  requests.py  scoring.py  semantic.py  service.py
backend/src/bussola/profile/: enums.py  models.py
backend/src/bussola/voice/: config.py  errors.py  models.py  stt.py  tts.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/api/: conftest.py  test_auth_router.py  test_deps.py  test_job_requests_router.py  test_matching_router.py  test_operators_router.py  test_profiles_router.py
backend/tests/auth/: test_accounts.py  test_auth_audit.py  test_bootstrap.py  test_migration_auth.py  test_passwords.py  test_rbac.py  test_service_accounts.py  test_service_login.py  test_sessions.py
backend/tests/data/: conftest.py  test_audit.py  test_config.py  test_connection.py  test_migrations.py  test_profiles.py  test_profiles_search.py  test_pseudonym.py
backend/tests/guardrails/: conftest.py  test_adversarial.py  test_pii.py  test_pipeline.py  test_prompts.py  test_refusal.py  test_sanitize_profile.py  test_scope.py
backend/tests/interview/: conftest.py  test_confirm.py  test_extraction.py  test_incongruence.py  test_interview.py  test_interview_live.py  test_sections.py  test_session.py
backend/tests/llm/: test_client.py  test_client_json.py  test_config.py
backend/tests/matching/: conftest.py  test_hard_constraints.py  test_migration_matching.py  test_models.py  test_requests.py  test_scoring_gaps.py  test_semantic.py  test_service.py  test_service_live.py
backend/tests/profile/: test_models.py  test_whitelist.py
backend/tests/voice/: test_config.py  test_stt.py  test_tts.py  test_voice_live.py
db-init/: 00-roles.sh
(+21 files in other folders)
