[project]
name = "bussola"
version = "0.1.0"
description = "Work profiling assistant - backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*", "spacy.*"]
ignore_missing_imports = true
