[project]
name = "bussola"
version = "0.1.0"
description = "Work profiling assistant - backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
    "spacy>=3.7,<4",
    "httpx>=0.27,<0.29",
    "psycopg[binary]>=3.1,<4",
    "argon2-cffi>=23.1,<24",
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6",
    "mypy>=1.11",
]
voice = [
    "faster-whisper>=1.0,<2",
    "piper-tts>=1.5,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*", "spacy.*", "faster_whisper.*", "piper.*"]
ignore_missing_imports = true
